Added section about change Color

--- a/about.html
+++ b/about.html
@@ -18,40 +18,40 @@
 
     <div class="container" id="main-content">
         <article>
-            <h1>about</h1>
-            <p class="about" style="text-align: justify;">
-                <br>Hello, my name is Ronaldo, I'm 27 years old and I'm from Rio Grande do Sul, Brazil.
-                In 2021 I graduated in Control and Automation Engineer by IFRS and I've been working with mechanical
-                design for the last 5 years.</br>
-                <br>Nowadays I work as a machine developer for shoes industry and this job is not just to receive the
-                requirements of the client and draw a machine to satisfy them, it's about understand the real issue and
-                improve the process as a whole, including the client in the solution of the problem and managing dates
-                to guarantee the progress of all areas to let the product done just in time.</br>
-                <br>Since the beginning of engineer graduation, I liked the dynamic and the possibilities while
-                programming
-                in C and making projects in Arduino, that uses a language like C++ but a little simplified.
-                During my work as a mechanical draftsman, I developed some automated tables in excel and did some
-                <br>improvements in Solidworks VBA macros to speed up the creation process.</br>
-                <br>About a year ago I decided to change my career and I start studying for it. I've done courses to
-                learn
-                the basics of JAVA, VBA, Python, HTML, CSS, JavaScript and now I want to do the next step that is find a
-                find an opportunity to put knowledge into practice and learn with most experienced developers.</br>
+            <h1>About me</h1>
+            <p class="bout" style="text-align: justify;">
+            <p><strong>Hello, my name is Ronaldo. I'm 27 years old, and I'm from Rio Grande do Sul,
+                    Brazil.</strong><br /></p>
+            <p>In 2021, I graduated in Control and Automation Engineering from IFRS, and I've
+                been working in mechanical design for the past 5 years.</p>
+            <p>Currently, I work as a machine developer for the shoe industry. My job involves more than just receiving
+                client requirements and designing a machine to meet them. It's about understanding the real issue and
+                improving the process as a whole. This includes involving the client in problem-solving and managing
+                timelines to ensure all areas progress in sync, delivering the product just in time.</p>
+            <p>Since the start of my engineering degree, I've enjoyed the dynamics and possibilities of programming,
+                particularly in C, and working on projects with Arduino, which uses a C++-like language, albeit
+                simplified. During my time as a mechanical draftsman, I developed automated Excel tables and enhanced
+                SolidWorks VBA macros to accelerate the design process.</p>
+            <p>About a year ago, I decided to change my career focus and began studying software development. I have
+                completed courses in Java, VBA, Python, HTML, CSS, and JavaScript. Now, I am looking for an opportunity
+                to apply my knowledge in practice and learn from more experienced developers.</p>
+            <p>I created this page not only to show recruiters that I'm committed to gaining knowledge and pursuing
+                opportunities but also for the following reasons:</p>
+            <ol>
                 <br>
-                I'm creating this page not only to show recruiters that I'm commited in this searching for knowledge and
-                oportunities
-                but also for things that follow:
-                The second motivation is to keep learning programming logic, in this case HTML CSS and JS. Despite my
-                focus are JAVA or C#, I belive that this fexibility of knowing the basics of other lenguages are very
-                important for the sustententable growth in the career.
-                The third one is to share some historical curiosities that I learn with books, museums, videos, podcasts
-                and conversation. When I was younger,
-                till the midschool I used to despise history because the way it were teached to me. Actually it's very
-                interesting, but you need to put in others
-                pants to get the satisfection of the facts.
-                The forth is to improve my english skill. Because of it all the website is written in english so if you
-                find any issue, please contact me by the links bellow.
+                <li><strong>To continue learning programming logic</strong>, especially through HTML, CSS, and
+                    JavaScript. While my main focus is on Java and C#, I believe having a flexible understanding of
+                    multiple languages is crucial for sustainable growth in this career.</li>
                 <br>
-                <br></br>
+                <li><strong>To share historical curiosities</strong> I&rsquo;ve learned from books, museums, videos,
+                    podcasts, and conversations. When I was younger, I didn&rsquo;t appreciate history because of how it
+                    was taught. Now, I find it fascinating&mdash;understanding history requires seeing things from
+                    others&rsquo; perspectives to truly grasp the significance of the facts.</li>
+                <br>
+                <li><strong>To improve my English skills.</strong> That's why the entire website is written in English.
+                    If you notice any mistakes or areas for improvement, feel free to contact me using the links below.
+                </li>
+            </ol>
             </p>
         </article>
     </div>
