--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
         </div>
 
         <div class="dropdown">
-            <button class="dropbtn">Dropdown</button>
+            <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
                 <a href="../../../about.html" id="button1" name="about" class="dropbtn">About</a>
                 <a href="../../../blog.html" id="button2" name="blog" class="dropbtn">Blog</a>
