--- a/publications/portifolio/1-thisSite/1-thisSite.html
+++ b/publications/portifolio/1-thisSite/1-thisSite.html
@@ -82,6 +82,17 @@
                     opportunity to host my database online, allowing me to improve my CRUD applications.</p>
             </li>
         </ul>
+        <p>
+        <p>One of the most challenging issues I faced was with my website: every time I updated it, the browser
+            continued displaying the old version. After a while, I discovered that this was due to the browser's cache.
+            To solve this, I had to modify the Cache-Control header by updating the <code>.htaccess</code> file on my
+            website, as shown below:</p>
+        </p>
+        <figure>
+            <img class="blogMedia" src="../1-thisSite/htacssEdited.png" alt="Edited Cache Control">
+            <figcaption class="figCaption">Image 1: Cache Control code edited - created by author.
+            </figcaption>
+        </figure>
         <p>Finally, this is a very interesting and engaging project that I will continue to improve whenever a new idea
             comes to mind.</p>
         </p>
