--- a/publications/portifolio/3-partColorAutomation/3-partColorAutomation.html
+++ b/publications/portifolio/3-partColorAutomation/3-partColorAutomation.html
@@ -31,14 +31,22 @@
             the part, check the color code in the Custom Property Tab, select what they guess is the correct color,
             paint the part, save it, close it, and then move on to the next one. Below is an example of a part with the
             Custom Property Tab showing the color code:</p>
-        <img class="blogMedia" src="../3-partColorAutomation/Custom Properties Example.png"
-            alt="Custom Properies Example">
+        <figure>
+            <img class="blogMedia" src="../3-partColorAutomation/Custom Properties Example.png"
+                alt="Custom Properies Example">
+            <figcaption class="figCaption">Image 1: Field where the color information comes from - created by author.
+            </figcaption>
+        </figure>
         <p>Now, assuming the information is correctly filled in the Custom Property, the only action needed is to run
             the macro, as shown below:</p>
-        <video class="blogMedia" controls>
-            <source src="../3-partColorAutomation/AddIn Working Example.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+        <figure>
+            <video class="blogMedia" controls>
+                <source src="../3-partColorAutomation/AddIn Working Example.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <figcaption class="figCaption">Media 1: Automation demonstration with sample assembly - created by author.
+            </figcaption>
+        </figure>
         <p>The manual process takes about 28 seconds per part, while the automation reduces this to 3 seconds per item,
             resulting in a time savings of 25 seconds per part. Considering that their projects often contain over 400
             parts, this feature proves to be a highly useful solution.</p>
@@ -79,11 +87,19 @@
                     subsequent searches easier.</p>
             </li>
         </ul>
-        <p>Finally, .</p>
+        <p>
+        <p>This project was highly challenging, pushing me to explore features and functionalities I had never
+            encountered before. However, it also demonstrated my ability to quickly adapt to different environments. To
+            top it off, I was able to develop a solid foundation for creating new automations and improving the ones
+            already in place.</p>
+        <p>Some potential future improvements could include integrating the system with the company&rsquo;s database to
+            filter items before processing them, preventing unnecessary items from being opened, and enhancing the
+            layout and design of the interactive windows.</p>
+        </p>
         <p>Note:</p>
         <ul>
             <li>Some informations are hided because of their confidentiality;</li>
-            <li>Te AddIn version showed in the videos is one used during the validations, and not the one delivered to
+            <li>The AddIn version showed in the videos is one used during the validations, and not the one delivered to
                 the costumer;</li>
             <li>If some of the parts aren't with the color field filled, the macro will open the part and close without
                 save.</li>
