Implemented Bootstrap features to fix the header - still with issues in the menu button

--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
     <table>
         <tr>
             <td>
-                <p>&copy; 2024 My Programming Portfolio and Blog</p>
+                <p>&copy;Developed by Ronaldo Battisti - 2024</p>
             </td>
         </tr>
         <tr>
