--- a/header.html
+++ b/header.html
@@ -1,21 +1,25 @@
 <header>
-    <div class="div-header">
-        <div>
-            <a href="../../../index.html">
-                <img src="../../../img/Foto.png" alt="Home" name="index" id="img1">
-            </a>
-        </div>
+    <div class="container-fluid" id="header-container">
+        <div class="row align-items-center justify-content-between" id="row-container">
+            <div class="col-lg-2">
+                <a href="../../../index.html">
+                    <img src="../../../img/Foto.png" alt="Home" name="index" id="img1">
+                </a>
+            </div>
 
-        <div class="div-header-title">
-            <h1>Welcome to my Programming Portfolio and Blog</h1>
-        </div>
+            <div class="col-lg-4 text-center">
+                <h1 class="header-title">Welcome to my Programming Portfolio and Blog</h1>
+            </div>
 
-        <div class="dropdown">
-            <button class="dropbtn">Menu</button>
-            <div class="dropdown-content">
-                <a href="../../../about.html" id="button1" name="about" class="dropbtn">About</a>
-                <a href="../../../blog.html" id="button2" name="blog" class="dropbtn">Blog</a>
-                <a href="../../../portfolio.html" id="button3" name="portfolio" class="dropbtn">Portifolio</a>
+            <div class="col-lg-2">
+                <div class="dropdown">
+                    <button class="dropbtn">Menu</button>
+                    <div class="dropdown-content">
+                        <a href="../../../about.html" id="button1" name="about" class="dropbtn">About</a>
+                        <a href="../../../blog.html" id="button2" name="blog" class="dropbtn">Blog</a>
+                        <a href="../../../portfolio.html" id="button3" name="portfolio" class="dropbtn">Portifolio</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
