--- a/about.html
+++ b/about.html
@@ -11,15 +11,15 @@
     <link rel="stylesheet" type="text/css" href="../../../styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!--<script src="load-content.js" defer></script>-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
     <div id="header-placeholder"></div>
 
     <div class="container" id="main-content">
-        <article>
+        <article style="text-align: justify;">
             <h1>About me</h1>
-            <p class="bout" style="text-align: justify;">
             <p><strong>Hello, my name is Ronaldo. I'm 27 years old, and I'm from Rio Grande do Sul,
                     Brazil.</strong><br /></p>
             <p>In 2021, I graduated in Control and Automation Engineering from IFRS, and I've
@@ -52,7 +52,6 @@
                     If you notice any mistakes or areas for improvement, feel free to contact me using the links below.
                 </li>
             </ol>
-            </p>
         </article>
     </div>
 
