--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="img/MainIcon.png" sizes="32x32">
     <link rel="stylesheet" type="text/css" href="../../../styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
