--- a/publications/portifolio/1-thisSite/1-thisSite.html
+++ b/publications/portifolio/1-thisSite/1-thisSite.html
@@ -2,14 +2,14 @@
 <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
 <html lang="en">
 
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=2.0, maximum-scale=1.0, user-scalable=no">
     <title>Ronaldo Battisti</title>
-    <link rel="icon" href="../../../img/MainIcon.png" sizes="32x32">
+    <link rel="icon" href="img/MainIcon.png" sizes="32x32">
     <link rel="stylesheet" type="text/css" href="../../../styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -58,14 +58,20 @@
                     menu
                     design, I realized how important planning and prototyping are before diving into coding.</p>
             </li>
-            <li><strong>HTML</strong>: I gained a good understanding of how to structure the layout using basic HTML
-                commands effectively. It highlighted the importance of mastering even the most fundamental elements.
+            <li>
+                <p><strong>HTML</strong>: I gained a good understanding of how to structure the layout using basic HTML
+                    commands effectively. It highlighted the importance of mastering even the most fundamental elements.
+                </p>
             </li>
             <li>
                 <p><strong>CSS</strong>: This was the one language I hadn&rsquo;t had much exposure to before. As the
                     project grew, I realized how essential consistent formatting is, especially as my CSS file started
                     to
                     grow too.</p>
+            </li>
+            <li>
+                <p><strong>Bootstrap</strong>: Unfortunately I discovered this framework after most of the site was
+                    completed, so when I come across cool new features, I go back to the project and implement them.</p>
             </li>
             <li>
                 <p><strong>JavaScript</strong>: In my first experience using JavaScript for web development, I saw
