Updated website and added a publication to blog and portifolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,24 +22,18 @@
             <h3>1 - <a href="/publications/portifolio/1-thisSite/1-thisSite.html" class="article-link">My website</a>
             </h3>
             <p>Published 11/09/2024</p>
-            <p class="tags">Tags: HTML, CSS, JavaScript, Hosting</p>
+            <p class="tags">Tags: HTML, CSS, JavaScript, Bootstrap, Hosting</p>
         </article>
 
-        <article></article>
-        <h3>2 - <a href="#" class="article-link">Hotel Registration System</a></h3>
+        <article>
+        <h3>2 - <a href="/publications/portifolio/2-hotelRegistrationSystem/2-hotelRegistrationSystem.html" class="article-link">Hotel Registration System</a></h3>
         <p>Published 11/09/2024</p>
-        <p class="tags">Tags: C#, MySQL, Hosting, Views, CRUD</p>
+        <p class="tags">Tags: C#, SQL, MySQL, Hosting, Views, CRUD</p>
         </article>
 
-        <article></article>
+        <article>
         <h3>3 - <a href="/publications/portifolio/3-partColorAutomation/3-partColorAutomation.html"
                 class="article-link">Parts color property automation in SolidWorks with C#</a></h3>
-        <p>Published 11/09/2024</p>
-        <p class="tags">Tags: C#, SolidWorks, Automation</p>
-        </article>
-
-        <article></article>
-        <h3>4 - <a href="#" class="article-link">PDF's drawings saving automation in SolidWorks with C#</a></h3>
         <p>Published 11/09/2024</p>
         <p class="tags">Tags: C#, SolidWorks, Automation</p>
         </article>
